# gxconsole

./: .uncrustify.cfg  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
source/: console_internal.h  gxconsole.c  gxconsole.h
source/fonts/: cozette_6x13.c  tamzen_8x15.c
tools/: bdftool
